--- a/package.json
+++ b/package.json
@@ -14,12 +14,21 @@
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.17.3",
     "@types/nprogress": "^0.2.3",
+    "@types/react-datepicker": "^6.2.0",
     "ahooks": "^3.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -32,6 +41,8 @@
     "nprogress": "^0.2.0",
     "prettier": "^3.3.2",
     "react": "^18",
+    "react-datepicker": "^7.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-easy-crop": "^5.0.7",
     "react-hook-form": "^7.51.5",
