--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-hot-toast": "^2.4.1",
     "react-image-gallery": "^1.3.0",
     "react-select": "^5.8.0",
+    "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
