--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-datepicker": "^7.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-easy-crop": "^5.0.7",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
@@ -52,19 +53,20 @@
     "react-select": "^5.8.0",
     "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
