--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@types/nprogress": "^0.2.3",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-image-gallery": "^1.2.4",
+    "@types/uuid": "^10.0.0",
     "ahooks": "^3.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "firebase": "^10.13.1",
     "husky": "^9.0.11",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.394.0",
@@ -56,6 +58,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
