--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fashion-hub",
+  "name": "strativ-quiz-fe",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,22 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
-    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slider": "^1.2.0",
-    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-table": "^8.17.3",
     "@types/nprogress": "^0.2.3",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-image-gallery": "^1.2.4",
@@ -35,26 +26,16 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "firebase": "^10.13.1",
     "husky": "^9.0.11",
-    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.394.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "nprogress": "^0.2.0",
     "prettier": "^3.3.2",
     "react": "^18",
-    "react-datepicker": "^7.2.0",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "react-dropzone": "^14.2.3",
-    "react-easy-crop": "^5.0.7",
     "react-hook-form": "^7.51.5",
-    "react-hot-toast": "^2.4.1",
-    "react-image-gallery": "^1.3.0",
     "react-select": "^5.8.0",
-    "recharts": "^2.12.7",
-    "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
