feat: added skeleton of curd question and res of ques

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     ],
     "paths": {
       "@components/*": ["components/*"],
+      "@data/*": ["data/*"],
       "@library/*": ["library/*"],
       "@store/*": ["store/*"],
       "@styles/*": ["styles/*"],
